# market-implications

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_update.yaml  daily_update.yml
app/: main.py
data/: ingest.py  inspect_excel.py  inspect_pdf.py  market_data.json  prototype_url_finder.py
metrics/: __init__.py  calculations.py  credit.py
static/: style.css
templates/: index.html
