[project]
name = "market-implications"
version = "0.1.0"
description = "Market-Implied Metrics Web Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
