[project]
name = "market-implications"
version = "0.1.0"
description = "Market-Implied Metrics Web Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.0",
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
target-version = "py313"

lint.select = [
    "F",
    "E",
    "W",
    "I",
    "D",
    "UP",
    "N",
]

lint.ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "E402", # sys path before import
    "D415", # ends-in-punctuation
    "D100", # missing-docstring
    "D212", # multi-line-summary-first-line
    "D203", # 1 blank line before class
    "N806", # variable-in-function-lowercase
]

[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
disable_error_code = "top-level-await"
